[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillscan-fuzzer"
version = "1.0.0"
description = "LLM-powered adversarial skill file fuzzer for skillscan-security"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["security", "ai", "llm", "fuzzing", "red-team", "mcp", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1.0",
    "openai>=1.30.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/kurtpayne/skillscan-fuzzer"
Repository = "https://github.com/kurtpayne/skillscan-fuzzer"
Issues = "https://github.com/kurtpayne/skillscan-fuzzer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "pre-commit>=3.0.0",
    "mypy>=1.10.0",
]

[project.scripts]
skillscan-fuzzer = "cli:main"
skill-fuzzer = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "fuzzer.py",
    "cli.py",
    "prompts/*.txt",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
